Add more styling and add event loop

--- a/templates/killevent.html
+++ b/templates/killevent.html
@@ -9,99 +9,99 @@
         <div class="player" id="Killer">
             <div class="column player-info-container">
                 <div class="player-info">
-                    <p class="player-guild">guild name</p>
-                    <p class="player-name">player1</p>
-                    <p class="player-ip">IP: 1337</p>
+                    <p data-type="KillerGuild" class="player-guild"></p>
+                    <p data-type="KillerName" class="player-name"></p>
+                    <p data-type="KillerIP" class="player-ip"></p>
                 </div>
             </div>
             <div class="column">
                 <div class="tile">
-                    <img class="item" width="217" height="217" data-type="Bag" src="https://render.albiononline.com/v1/item/T4_2H_DUALCROSSBOW_HELL">
+                    <img class="item" width="217" height="217" data-type="Bag" src="https://raw.githubusercontent.com/agnjunio/albion-killbot/main/assets/slot.png">
                 </div>
                 <div class="tile">
-                    <img class="item" width="217" height="217" data-type="Head" src="https://render.albiononline.com/v1/item/T4_2H_DUALCROSSBOW_HELL">
+                    <img class="item" width="217" height="217" data-type="Head" src="https://raw.githubusercontent.com/agnjunio/albion-killbot/main/assets/slot.png">
                 </div>
                 <div class="tile">
-                    <img class="item" width="217" height="217" data-type="Cape" src="https://render.albiononline.com/v1/item/T4_2H_DUALCROSSBOW_HELL">
-                </div>
-            </div>
-            <div class="column">
-                <div class="tile">
-                    <img class="item" width="217" height="217" data-type="MainHand" src="https://render.albiononline.com/v1/item/T4_2H_DUALCROSSBOW_HELL">
-                </div>
-                <div class="tile">
-                    <img class="item" width="217" height="217" data-type="Armor" src="https://render.albiononline.com/v1/item/T4_2H_DUALCROSSBOW_HELL">
-                </div>
-                <div class="tile">
-                    <img class="item" width="217" height="217" data-type="OffHand" src="https://render.albiononline.com/v1/item/T4_2H_DUALCROSSBOW_HELL">
+                    <img class="item" width="217" height="217" data-type="Cape" src="https://raw.githubusercontent.com/agnjunio/albion-killbot/main/assets/slot.png">
                 </div>
             </div>
             <div class="column">
                 <div class="tile">
-                    <img class="item" width="217" height="217" data-type="Food" src="https://render.albiononline.com/v1/item/T4_2H_DUALCROSSBOW_HELL">
+                    <img class="item" width="217" height="217" data-type="MainHand" src="https://raw.githubusercontent.com/agnjunio/albion-killbot/main/assets/slot.png">
                 </div>
                 <div class="tile">
-                    <img class="item" width="217" height="217" data-type="Shoes" src="https://render.albiononline.com/v1/item/T4_2H_DUALCROSSBOW_HELL">
+                    <img class="item" width="217" height="217" data-type="Armor" src="https://raw.githubusercontent.com/agnjunio/albion-killbot/main/assets/slot.png">
                 </div>
                 <div class="tile">
-                    <img class="item" width="217" height="217" data-type="Potion" src="https://render.albiononline.com/v1/item/T4_2H_DUALCROSSBOW_HELL">
+                    <img class="item" width="217" height="217" data-type="OffHand" src="https://raw.githubusercontent.com/agnjunio/albion-killbot/main/assets/slot.png">
                 </div>
             </div>
             <div class="column">
                 <div class="tile">
-                    <img class="item" width="217" height="217" data-type="Mount" src="https://render.albiononline.com/v1/item/T4_2H_DUALCROSSBOW_HELL">
+                    <img class="item" width="217" height="217" data-type="Food" src="https://raw.githubusercontent.com/agnjunio/albion-killbot/main/assets/slot.png">
+                </div>
+                <div class="tile">
+                    <img class="item" width="217" height="217" data-type="Shoes" src="https://raw.githubusercontent.com/agnjunio/albion-killbot/main/assets/slot.png">
+                </div>
+                <div class="tile">
+                    <img class="item" width="217" height="217" data-type="Potion" src="https://raw.githubusercontent.com/agnjunio/albion-killbot/main/assets/slot.png">
+                </div>
+            </div>
+            <div class="column">
+                <div class="tile">
+                    <img class="item" width="217" height="217" data-type="Mount" src="https://raw.githubusercontent.com/agnjunio/albion-killbot/main/assets/slot.png">
                 </div>
             </div>
         </div>
-        <div class="stats">
+        <div id="Stats" class="stats">
             <p>Killed</p>
-            <p>191,556 Fame</p>
-            <p class="date">2021.05.06 04:35</p>
+            <p data-type="TotalVictimKillFame"></p><img width="20" height="20" src="https://raw.githubusercontent.com/agnjunio/albion-killbot/main/assets/fame.png">
+            <p data-type="TimeStamp" class="date"></p>
         </div>
         <div class="player" id="Victim">
             <div class="column player-info-container">
                 <div class="player-info">
-                    <p class="player-guild">guild name</p>
-                    <p class="player-name">player1</p>
-                    <p class="player-ip">IP: 1337</p>
+                    <p data-type="VictimGuild" class="player-guild"></p>
+                    <p data-type="VictimName" class="player-name"></p>
+                    <p data-type="VictimIP" class="player-ip"></p>
                 </div>
             </div>
             <div class="column">
                 <div class="tile">
-                    <img class="item" width="217" height="217" data-type="Bag" src="https://render.albiononline.com/v1/item/T4_2H_DUALCROSSBOW_HELL">
+                    <img class="item" width="217" height="217" data-type="Bag" src="https://raw.githubusercontent.com/agnjunio/albion-killbot/main/assets/slot.png">
                 </div>
                 <div class="tile">
-                    <img class="item" width="217" height="217" data-type="Head" src="https://render.albiononline.com/v1/item/T4_2H_DUALCROSSBOW_HELL">
+                    <img class="item" width="217" height="217" data-type="Head" src="https://raw.githubusercontent.com/agnjunio/albion-killbot/main/assets/slot.png">
                 </div>
                 <div class="tile">
-                    <img class="item" width="217" height="217" data-type="Cape" src="https://render.albiononline.com/v1/item/T4_2H_DUALCROSSBOW_HELL">
-                </div>
-            </div>
-            <div class="column">
-                <div class="tile">
-                    <img class="item" width="217" height="217" data-type="MainHand" src="https://render.albiononline.com/v1/item/T4_2H_DUALCROSSBOW_HELL">
-                </div>
-                <div class="tile">
-                    <img class="item" width="217" height="217" data-type="Armor" src="https://render.albiononline.com/v1/item/T4_2H_DUALCROSSBOW_HELL">
-                </div>
-                <div class="tile">
-                    <img class="item" width="217" height="217" data-type="OffHand" src="https://render.albiononline.com/v1/item/T4_2H_DUALCROSSBOW_HELL">
+                    <img class="item" width="217" height="217" data-type="Cape" src="https://raw.githubusercontent.com/agnjunio/albion-killbot/main/assets/slot.png">
                 </div>
             </div>
             <div class="column">
                 <div class="tile">
-                    <img class="item" width="217" height="217" data-type="Food" src="https://render.albiononline.com/v1/item/T4_2H_DUALCROSSBOW_HELL">
+                    <img class="item" width="217" height="217" data-type="MainHand" src="https://raw.githubusercontent.com/agnjunio/albion-killbot/main/assets/slot.png">
                 </div>
                 <div class="tile">
-                    <img class="item" width="217" height="217" data-type="Shoes" src="https://render.albiononline.com/v1/item/T4_2H_DUALCROSSBOW_HELL">
+                    <img class="item" width="217" height="217" data-type="Armor" src="https://raw.githubusercontent.com/agnjunio/albion-killbot/main/assets/slot.png">
                 </div>
                 <div class="tile">
-                    <img class="item" width="217" height="217" data-type="Potion" src="https://render.albiononline.com/v1/item/T4_2H_DUALCROSSBOW_HELL">
+                    <img class="item" width="217" height="217" data-type="OffHand" src="https://raw.githubusercontent.com/agnjunio/albion-killbot/main/assets/slot.png">
                 </div>
             </div>
             <div class="column">
                 <div class="tile">
-                    <img class="item" width="217" height="217" data-type="Mount" src="https://render.albiononline.com/v1/item/T4_2H_DUALCROSSBOW_HELL">
+                    <img class="item" width="217" height="217" data-type="Food" src="https://raw.githubusercontent.com/agnjunio/albion-killbot/main/assets/slot.png">
+                </div>
+                <div class="tile">
+                    <img class="item" width="217" height="217" data-type="Shoes" src="https://raw.githubusercontent.com/agnjunio/albion-killbot/main/assets/slot.png">
+                </div>
+                <div class="tile">
+                    <img class="item" width="217" height="217" data-type="Potion" src="https://raw.githubusercontent.com/agnjunio/albion-killbot/main/assets/slot.png">
+                </div>
+            </div>
+            <div class="column">
+                <div class="tile">
+                    <img class="item" width="217" height="217" data-type="Mount" src="https://raw.githubusercontent.com/agnjunio/albion-killbot/main/assets/slot.png">
                 </div>
             </div>
         </div>
@@ -116,6 +116,7 @@
 
     body {
         font-size: 16px;
+        background: #23272A;
     }
 
     .player {
@@ -182,7 +183,6 @@
         width: 100%;
         display: flex;
         flex-direction: column;
-        background: #23272A;
         border-radius: 10px 10px 0 0;
         align-items: center;
         padding: 5px;
