--- a/templates/killevent.html
+++ b/templates/killevent.html
@@ -9,9 +9,9 @@
         <div class="player" id="Killer">
             <div class="column player-info-container">
                 <div class="player-info">
-                    <p data-type="KillerGuild" class="player-guild"></p>
-                    <p data-type="KillerName" class="player-name"></p>
-                    <p data-type="KillerIP" class="player-ip"></p>
+                    <p data-type="KillerGuild" class="player-guild">KillerGuild</p>
+                    <p data-type="KillerName" class="player-name">KillerName</p>
+                    <p data-type="KillerIP" class="player-ip">KillerIP</p>
                 </div>
             </div>
             <div class="column">
@@ -55,15 +55,15 @@
         </div>
         <div id="Stats" class="stats">
             <p>Killed</p>
-            <p data-type="TotalVictimKillFame"></p><img width="20" height="20" src="https://raw.githubusercontent.com/agnjunio/albion-killbot/main/assets/fame.png">
-            <p data-type="TimeStamp" class="date"></p>
+            <p data-type="TotalVictimKillFame">1337</p><img width="20" height="20" src="https://raw.githubusercontent.com/agnjunio/albion-killbot/main/assets/fame.png">
+            <p data-type="TimeStamp" class="date">2021</p>
         </div>
         <div class="player" id="Victim">
             <div class="column player-info-container">
                 <div class="player-info">
-                    <p data-type="VictimGuild" class="player-guild"></p>
-                    <p data-type="VictimName" class="player-name"></p>
-                    <p data-type="VictimIP" class="player-ip"></p>
+                    <p data-type="VictimGuild" class="player-guild">VictimGuild</p>
+                    <p data-type="VictimName" class="player-name">VictimName</p>
+                    <p data-type="VictimIP" class="player-ip">VictimIP</p>
                 </div>
             </div>
             <div class="column">
@@ -142,15 +142,13 @@
     }
 
     .stats p {
-        font-size: 1rem;
+        font-size: 1.5rem;
         margin: 5px 0;
     }
 
     .stats .date {
         font-size: 0.5rem;
     }
-
-
 
     .column {
         display: flex;
@@ -190,12 +188,12 @@
 
     .player-info p {
         margin: 5px 0;
-        font-size: 1rem;
+        font-size: 2rem;
     }
 
     .player-info .player-guild,
     .player-info .player-ip {
-        font-size: 0.75rem;
+        font-size: 1rem;
     }
 
 </style>
